--- a/addressbook-web-tests/addressbook-web-tests/packages.config
+++ b/addressbook-web-tests/addressbook-web-tests/packages.config
@@ -1,5 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MSTest.TestAdapter" version="2.2.7" targetFramework="net472" />
-  <package id="MSTest.TestFramework" version="2.2.7" targetFramework="net472" />
+  <package id="AngleSharp" version="1.0.1" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
+  <package id="MSTest.TestAdapter" version="3.0.2" targetFramework="net472" />
+  <package id="MSTest.TestFramework" version="3.0.2" targetFramework="net472" />
+  <package id="NUnit" version="3.13.3" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="4.4.2" targetFramework="net472" />
+  <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net472" />
+  <package id="Selenium.Firefox.WebDriver" version="0.27.0" targetFramework="net472" />
+  <package id="Selenium.Mozilla.Firefox.Webdriver" version="0.6.0.1" targetFramework="net472" />
+  <package id="Selenium.Support" version="4.9.1" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="4.9.1" targetFramework="net472" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="113.0.5672.6300" targetFramework="net472" />
+  <package id="Selenium.WebDriver.GeckoDriver" version="0.33.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.GeckoDriver.Win32" version="0.33.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.GeckoDriver.Win64" version="0.33.0" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.4.2" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="7.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="WebDriver.GeckoDriver" version="0.20.1" targetFramework="net472" />
+  <package id="WebDriverManager" version="2.16.2" targetFramework="net472" />
 </packages>
