--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="EmptyTextFile.txt" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Readme.txt" />
